<resources>
    <string name="app_name">Music_App</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>

    <string name="world_of_music">World of Music</string>
    <string name="back_btn">Before</string>
    <string name="song_name">Song Name</string>

    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>

    <string name="repeat_btn">Repeat</string>
    <string name="equaliser_btn">Equaliser</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to the,\nWorld of Music</string>

    <string name="feed">Feedback</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="song_album">Song Album</string>
</resources>