<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            tools:ignore="NestedWeights"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_favorite_border_24"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/mummy"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="10dp"/>
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center"
        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/previousBtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_arrow_back_ios_new_24"
        app:iconSize="40dp"
        >
    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playPauseBtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_pause_24"
        app:iconSize="50dp"
        android:layout_marginHorizontal="25dp"
        app:shapeAppearanceOverlay="@style/curved"
        android:backgroundTint="@android:color/holo_red_light"
        app:iconTint="@color/white">
    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextBtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_navigate_next_24"
        app:iconSize="60dp">
    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/start_tv"
            android:gravity="center"
            ></TextView>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/end_tv"
            android:gravity="center"
            ></TextView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_repeat_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            app:tint="@android:color/holo_red_light" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_equalizer_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equaliser_btn"
            android:layout_weight="1"
            app:tint="@android:color/holo_red_light" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_timer_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"
            app:tint="@android:color/holo_red_light" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_share_24"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"
            app:tint="@android:color/holo_red_light" />


    </LinearLayout>
</LinearLayout>